--- a/src/pages/cards/styles.less
+++ b/src/pages/cards/styles.less
@@ -22,11 +22,11 @@
 
         // margin: 6px;
         // overflow: auto; 
-        &>div {
-            // background-color: black;
+        // &>div {
+        //     // background-color: black;
 
-            height: 100%;
-        }
+        //     height: 100%;
+        // }
     }
 }
 .treasureChest_box,.treasureChest,.treasureChest>div:first-child,.triangle{
