--- a/src/pages/cards/components/Banner/index.module.less
+++ b/src/pages/cards/components/Banner/index.module.less
@@ -2,8 +2,14 @@
     // user-select: none;
     width: 100%;
     height: 100%;
+    display: grid;
+    grid-template-rows: 50% 50%;
+    grid-template-columns: 100%;
     img{
         width: 100%;
-        height: 50%;
+        height: 100%;
+        border-radius: 12px;
+        border-bottom-left-radius: 0!important;
+        border-bottom-right-radius: 0!important;
     }
 }
