--- a/src/pages/cards/components/PhotosBox/index.module.less
+++ b/src/pages/cards/components/PhotosBox/index.module.less
@@ -1,9 +1,90 @@
-.bannerBox{
+.photosBox {
     // user-select: none;
     width: 100%;
     height: 100%;
-    img{
+
+    img {
         width: 100%;
-        height: 50%;
+        height: 100%;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        
+    }
+
+    .photos_list_box {
+        
+
+        li {
+            flex: 1;
+            margin-right: 2px;
+            animation: movePhoto 1s ease-in-out;
+            animation-fill-mode: forwards;
+            position: relative;
+            
+            p{
+                position: absolute;
+                top: 12px;
+                left: 12px;
+                color: aliceblue;
+            }
+            span:last-child{
+                position: absolute;
+                bottom: 12px;
+                left: 12px;
+                z-index: 10;
+                color: aliceblue;
+            }
+            &>div>div{
+                transition: all .5s ease-in-out;
+            }
+            &:last-child {
+                margin-right: 0;
+            }
+            
+        }
+    }
+
+    .photosBox_btns_box {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        z-index: 1;
+
+        .photosBox_btns {
+            li {
+                width: 16px;
+                height: 4px;
+                border-radius: 50px;
+                opacity: .8;
+                margin-right: 6px;
+                cursor: pointer;
+                position: relative;
+
+                &:hover {
+                    opacity: 1;
+                }
+
+                &:last-child {
+                    margin-right: 0
+                }
+            }
+
+            .photosBox_btn_active {
+                opacity: 1;
+            }
+        }
+    }
+}
+
+@keyframes movePhoto {
+    0% {
+        // transform: translateX(0);
+        opacity: 0.5;
+        filter: blur(5px);
+    }
+    100% {
+        // transform: translateX(-100%);
+        opacity: 1;
+        filter: blur(0);
     }
 }
