--- a/src/global.css
+++ b/src/global.css
@@ -690,6 +690,13 @@ button {
     overflow-x: auto;
 }
 
+.filterGray{
+    filter: grayscale(1);
+    -webkit-filter: grayscale(1);
+    -moz-filter: grayscale(1);
+    -ms-filter: grayscale(1);
+    -o-filter: grayscale(1);
+}
 .textSingeLine {
     /* text-overflow: ellipsis;
     overflow: hidden;
