--- a/src/components/MaskElement/index.module.less
+++ b/src/components/MaskElement/index.module.less
@@ -3,7 +3,7 @@
     top: 62px;
     left: 0;
     width: 100vw;
-    height: calc(100vw - 62px);
+    height: calc(100vh - 62px);
     background-color: #c5e3ff54;
     z-index: -1;
     // opacity: 0;
