--- a/src/styles/dark/colors.less
+++ b/src/styles/dark/colors.less
@@ -1,12 +1,13 @@
-@black: #333;
-@white: #fff;
-@gray: #999;
-@gray-light: #ddd;
-@gray-lighter: #eee;
-@gray-lightest: #fafafa;
-@blue: #049cdb;
-@blue-light: #5bc0de;
-@blue-lighter: #99d9f7;
-@blue-lightest: #cce5ff;
-@red: rgb(224, 44, 44);
-@orange: rgb(224, 125, 31);
+@b_black: #333;
+@b_white: #fff;
+@b_gray: #999;
+@b_gray-light: #ddd;
+@b_gray-lighter: #eee;
+@b_gray-lightest: #fafafa;
+@b_blue: #049cdb;
+@b_blue-light: #5bc0de;
+@b_blue-lighter: #99d9f7;
+@b_blue-lightest: #cce5ff;
+@b_red: rgb(224, 44, 44);
+@b_orange: rgb(224, 125, 31);
+@b_green: rgb(66, 124, 33);
