--- a/src/styles/dark/theme_dark.less
+++ b/src/styles/dark/theme_dark.less
@@ -28,6 +28,9 @@
     .colorBlue {
         color: rgb(35, 81, 112);
     }
+    .colorGreen {
+        color: @b_green;
+    }
 
     .colorOrange {
         color: rgb(126, 79, 34);
