--- a/src/styles/light/theme_light.less
+++ b/src/styles/light/theme_light.less
@@ -21,6 +21,9 @@
     .colorOrange{
         color: rgb(224, 125, 31);
     }
+    .colorGreen{
+        color: @green;
+    }
     .svg-fill{
         fill:#000000;
     }
