--- a/src/pages/cards/components/CardCreator/index.module.less
+++ b/src/pages/cards/components/CardCreator/index.module.less
@@ -1,56 +1,110 @@
-.cardCreator{
+.cardCreator {
     position: relative;
-    img{
+
+    img {
         // border-radius: 12px;
     }
-    .rightTopBox{
-        display: none;
+
+    .rightTopBox {
+        // display: block;
         position: absolute;
         top: 0;
         right: 0;
         border-bottom-left-radius: 50px;
-        height: 26px;
-        width: 26px;
-        &>div{
+        border-top-right-radius: 12px;
+        height: 10px;
+        width: 10px;
+        transition: all .3s ease-in-out;
+        &>div {
+            display: none;
             text-align: center;
             line-height: 26px;
+            opacity: 0;
+            visibility: hidden;
         }
     }
-    &:hover{
-        .rightTopBox{
-            display: block;
-        }
-    }
-    .changeWHBox{
-        .changeHeight,.changeWidth{
 
+    &:hover {
+        .rightTopBox {
+            height: 26px;
+            width: 26px;
+            background-color: rgba(105, 105, 105, 0.164);
+            &>div {
+                display: block;
+                opacity: 1;
+                visibility: visible;
+            }
         }
-        .changeHeight{
+    }
+
+    .changeWHBox {
+
+        .changeHeight,
+        .changeWidth {}
+
+        .changeHeight {
             width: calc(100% - 42px);
             height: 4px;
             position: absolute;
             bottom: 6px;
             left: 21px;
-            cursor:ns-resize;
+            cursor: ns-resize;
+            animation: topBottom 1s ease-in-out infinite;
         }
-        .changeWidth{
+
+        .changeWidth {
             width: 4px;
             height: calc(100% - 52px);
             position: absolute;
-            top:32px;
+            top: 32px;
             right: 6px;
             cursor: ew-resize;
+            animation: leftRight 1s ease-in-out infinite;
         }
-        .changeHeight,.changeWidth{
+
+        .changeHeight,
+        .changeWidth {
             border-radius: 50px;
-            opacity: 0;
-            &:hover{
+            opacity: 0.2;
+
+            &:hover {
                 opacity: 1;
             }
-            &:active{
+
+            &:active {
                 opacity: 1;
             }
-            
+
         }
+    }
+}
+
+@keyframes leftRight {
+    0%{
+        transform: scaleX(1);
+        opacity: 0.2;
+    }
+    50%{
+        transform: scaleX(1.2);
+        opacity: .5;
+    }
+    100%{
+        transform: scaleX(1);
+        opacity: 0.2;
+    }
+}
+
+@keyframes topBottom {
+    0%{
+        transform: scaleY(1);
+        opacity: 0.2;
+    }
+    50%{
+        transform: scaleY(1.2);
+        opacity: .5;
+    }
+    100%{
+        transform: scaleY(1);
+        opacity: 0.2;
     }
 }
