--- a/src/pages/cards/components/game/TurntableBox/index.module.less
+++ b/src/pages/cards/components/game/TurntableBox/index.module.less
@@ -1,8 +1,8 @@
-.TurntableBox {
+.turntableBox {
     // user-select: none;
     width: 100%;
     height: 100%;
-
+    cursor: pointer;
     ul {
         position: relative;
         // animation: rotate 3s linear infinite;
@@ -11,7 +11,17 @@
 
     .kindItemBox {
         transform-origin: center center;
-
+        &>div{
+            font-size: 58px;
+            line-height: 58px;
+            transform: scale(1);
+            transition: transform .3s ease-in-out;
+        }
+        &:hover{
+            &>div{
+                transform: scale(1.3);
+            }
+        }
         // &::after {
         //     content: '';
         //     width: 0;
