--- a/src/styles/dark/theme_dark.less
+++ b/src/styles/dark/theme_dark.less
@@ -35,6 +35,10 @@
     .colorOrange {
         color: rgb(126, 79, 34);
     }
+    
+    .colorPurple{
+        color:@b_purple
+    }
 
     .svg-fill {
         fill: #fff;
@@ -80,7 +84,9 @@
     .bg4 {
         background-color: #2e2e2ef5;
     }
-
+    .bg5{
+        background-color: #363636f5;
+    }
     .bg_gray {
         background-color: #444444;
     }
@@ -88,7 +94,9 @@
     .bg_black {
         background-color: #ffffff;
     }
-
+    .bg_purple{
+        background-color: @b_purple;
+    }
     table {
         background-color: #36383b;
     }
