--- a/src/styles/light/theme_light.less
+++ b/src/styles/light/theme_light.less
@@ -33,6 +33,9 @@
     .colorGray{
         color:#a5a5a5;
     }
+    .colorPurple{
+        color:@purple
+    }
     .btnDefault{
         background-color: #46a7a7;
         color: #186d6d;
@@ -56,6 +59,9 @@
     .bg4{
         background-color: #d7d7d7f5;
     }
+    .bg5{
+        background-color: #c4c4c4f5;
+    }
     .bg_gray{
         background-color: @gray;
     }
@@ -70,6 +76,9 @@
     }
     .bg_red{
         background-color: @red;
+    }
+    .bg_purple{
+        background-color: @purple;
     }
     table{
         background-color: #cccccc;
