--- a/src/global.css
+++ b/src/global.css
@@ -169,7 +169,9 @@ textarea {
 .opacityHalf {
     opacity: 20%;
 }
-
+.pointer{
+    cursor: pointer;
+}
 button {
     background-color: #007acc;
     color: #fff;
@@ -524,6 +526,10 @@ button {
     padding-bottom: 12px;
 }
 
+.paV16 {
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
 .paV24 {
     padding-top: 24px;
     padding-bottom: 24px;
@@ -689,7 +695,9 @@ button {
 .overflowX {
     overflow-x: auto;
 }
-
+.inline_block{
+    display: inline-block;
+}
 .filterGray{
     filter: grayscale(1);
     -webkit-filter: grayscale(1);
