--- a/src/pages/cards/components/MemorandumBox/index.module.less
+++ b/src/pages/cards/components/MemorandumBox/index.module.less
@@ -26,4 +26,25 @@
         }
 
     }
+    .formBox{
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        z-index: 1000;
+        .form_item {
+            height: 100%;
+            line-height: 35px;
+            padding: 0 16px;
+            font-size: 14px;
+            color: #333;
+            border: none;
+            border-radius: 0;
+            background-color: #fff;
+            &:first-child {
+                border-right: 1px solid #e5e5e5;
+            }
+        }
+    }
 }
