--- a/src/pages/news/pages/community/index.less
+++ b/src/pages/news/pages/community/index.less
@@ -1,10 +1,26 @@
+input{
+    border: none;
+    background: none;
+    
+}
 .mobile_search{
-    display: none;
+    // display: none;
+    // position: relative;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    position: fixed;
+    top: 90px;
+    width: calc(100% - 352px);
+    border-radius: 6px;
+    z-index: 50;
     .input{
         border-radius: 12px;
         border-radius: 12px;
     }
+    
+    
 }
+
 .hotestNews{
     img{
         width: 100%;
@@ -18,7 +34,7 @@
         height: calc(100% - 220px);
         overflow-y: hidden;
         padding-right: 12px;
-        
+        overflow-y: auto;
         &:hover{
             &::-webkit-scrollbar{
                 display: block; 
@@ -176,8 +192,17 @@
     .community_box{
         display: flex;
         flex-direction: column;
+        // &>div:first-child{
+        //     margin-top: 56px; 
+        // }
         &>div{
-            margin-bottom: 24px;
+            margin-top: 24px; 
+        }
+        &>div:last-child{
+            margin-bottom: 24px; 
+        }
+        &>div:first-child{
+            margin-top: 0; 
         }
     }
     // .hotestNews_comment_area{
@@ -228,11 +253,6 @@
         border-radius: 6px;
         // padding: 4px 12px;
         z-index: 50;
-        input{
-            border: none;
-            background: none;
-            
-        }
         // &::after{
         //     content:"";
         //     width: 100%;
