--- a/src/pages/news/pages/community/styles.module.less
+++ b/src/pages/news/pages/community/styles.module.less
@@ -19,7 +19,10 @@
         }
     }
 }
-
+.community_out_box{
+    height: calc(100vh - 166px);
+    margin-top: 56px;
+}
 .comment_box{
     position: fixed;
     bottom: 0;
@@ -55,5 +58,13 @@
                 
             }
         }
+    }
+}
+
+
+@media screen and (max-width: 640px) {
+    .community_out_box{
+        height: auto;
+        margin-top: 0;
     }
 }
