--- a/src/pages/news/pages/person/components/NewsItemBox/styles.module.less
+++ b/src/pages/news/pages/person/components/NewsItemBox/styles.module.less
@@ -20,7 +20,9 @@
     letter-spacing: 4px;
     font-size: 14px;
 }
-
+.showDeatilBtn{
+    display:block
+}
 .imgsBox{
     &>div{
         margin: 0 6px;
@@ -70,5 +72,14 @@
         &>div:last-child{
             margin-bottom: 0;
         }
+    }
+    .textContentBox{
+        letter-spacing: 4px;
+        font-size: 1.2em;
+        line-height: 1.8em;
+    }
+    .showDeatilBtn{
+        font-size: 16px;
+        font-weight: bold;
     }
 }
