--- a/src/pages/works/index.less
+++ b/src/pages/works/index.less
@@ -8,3 +8,14 @@
         background-color: #dd2a2a!important;
     }
 }
+
+
+@media screen and (max-width: 1000px) {
+    .controller{
+        bottom: auto !important;
+        margin-top: 12px;
+        right: auto !important;
+        left: 24px;
+    }
+    
+}
