--- a/src/pages/works/components/WorksShowBox/index.module.less
+++ b/src/pages/works/components/WorksShowBox/index.module.less
@@ -54,6 +54,7 @@
             font-size: 36px;
             line-height: 26px;
             margin: 0;
+            margin-left: 12px;
         }
     }
 }
